Fixed spacing between links in fancy.css

--- a/fancy.css
+++ b/fancy.css
@@ -64,4 +64,5 @@ a{
     font-family: Verdana;
     text-align: center;
     background-color: #7f51eb;
+    margin-right: 1em;
 }
